# vidhi

./: in.bitspook.vidhi.asd  pyproject.toml  readme.org  scratch.lisp  vidhi.py
scripts/: deploy.sh
src/: nachrichtenleicht.lisp  package.lisp  word-bank.lisp
src/artifacts/: assisted-reader.lisp  home-page.lisp
src/lass/: global-lass.lisp  modern-normalize.lisp  pollen.lisp
src/nlp/: package.lisp
src/publisher/: assisted-reader.lisp  page.lisp
src/static/data/: frequent-words.json
src/widgets/: article.lisp  demo-page.lisp  home-page.lisp  reader-card.lisp  reader-page.lisp  simple-exercise.lisp  word-learner.lisp
